Add API for stopping and starting autoBuild, autoDeploy and autoSync at runtime
